[tool.poetry]
name = "greykite"
version = "1.0.0"
description = "Fork of greykite 1.0.0"
authors = [
    "MichaelaH <michaela.honkova@lynt.cz>",
    "Jan Smitka <jan.smitka@lynt.cz>"
]
repository = "https://github.com/LyntServices/greykite.git"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
cvxpy = "1.3"
dill = "^0.3.6"
holidays = "0.13"
holidays-ext = "^0.0.8"
ipython = "^7.31.1"
matplotlib = "3.8.1"
numpy = "1.26.0"
osqp = "^0.6.3"
overrides = "^7.3.1"
pandas = "2.1.1"
patsy = "^0.5.2"
plotly = "^5.4.0"
pmdarima = "2.0.2"
scipy = "^1.8.0,<1.11.0"
six = "^1.16.0"
scikit-learn = "1.3.1"
statsmodels = "^0.13.5"
testfixtures = "^6.14.2"
tqdm = "^4.64.1"
cython = "^3.0.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
appnope = "0.1.3"
bump2version = "0.5.11"
click = "8.0.1"
coverage = "6.3.2"
flake8 = "6.0.0"
ipykernel = "6.4.1"
ipywidgets = "7.5.1"
jupyter = "1.0.0"
jupyter-client = "7.4.7"
jupyter-console = "6.4.4"
jupyter-core = "5.2.0"
jupyter-server = "2.2.1"
lunarcalendar = "0.0.9"
nbformat = "5.5.0"
notebook = "6.5.2"
wheel = "0.33.6"
watchdog = "0.9.0"
twine = "1.14.0"
tornado = "6.2"
sphinx-rtd-theme = "^2.0.0"
sphinx-gallery = "0.10.1"
sphinx = "^7.3.7"
seaborn = "0.11.1"
requests = "^2.31.0"
pyzmq = "25.0.0"
pip = "21.0.1"
pillow = "9.4.0"
pytest = "7.4.4"  # 8.0.0 failed tests  # pytest = "^8.1.1"
pytest-runner = "^5.3.1"
cmake = "^3.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
